trunk/Archive2/33/abfb74a7c56f4f/output
main.cpp:12:29: error: missing terminating ' character
         std::cout << "123\n"';
                             ^
main.cpp:12:9: error: missing terminating ' character
         std::cout << "123\n"';
         ^
main.cpp: In function 'int main()':
main.cpp:13:1: error: expected ';' before '}' token
 }
 ^
